day-3/main.tf
resource "aws_instance" "terraform-instance" {

    tags = {
        env = "dev"
    }
    ami = "ami-0d351f1b760a30161"
    instance_type = "t3.micro"
    availability_zone = "ap-south-1a"
    key_name = "mumbai_kops"

    vpc_security_group_ids = [aws_security_group.mysg.id] 

    root_block_device {
        volume_size = 10  
    }
}
